Unchecked cast and wrong type